--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 authors = [
     { name="dongzhenye", email="dongzhenye@gmail.com" },
 ]
-description = "A lightweight converter for EVM and TRON addresses"
+description = "A lightweight converter for blockchain addresses supporting multiple formats"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
